--- a/archives/toutiao-search/2024-03-07.md
+++ b/archives/toutiao-search/2024-03-07.md
@@ -1,66 +1,81 @@
 # 2024-03-07
 
-共 111 条
+共 117 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 07 2024 06:00:53 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Mar 07 2024 07:00:34 GMT+0800 (China Standard Time) -->
 1. [代表建议不强制要求火葬](https://so.toutiao.com/search?keyword=代表建议不强制要求火葬)
 1. [全新丰田凯美瑞上市 17.18万起](https://so.toutiao.com/search?keyword=全新丰田凯美瑞上市+17.18万起)
 1. [政府工作报告里的这些话暖心提气](https://so.toutiao.com/search?keyword=政府工作报告里的这些话暖心提气)
-1. [人大代表联合建议逐步放开秸秆禁烧](https://so.toutiao.com/search?keyword=人大代表联合建议逐步放开秸秆禁烧)
+1. [红海三条海底光缆被切断 原因未明](https://so.toutiao.com/search?keyword=红海三条海底光缆被切断+原因未明)
 1. [人大代表：反对让学生逢雨停课](https://so.toutiao.com/search?keyword=人大代表：反对让学生逢雨停课)
 1. [中国第四艘航母很快公布](https://so.toutiao.com/search?keyword=中国第四艘航母很快公布)
-1. [政府工作报告定调2024房地产](https://so.toutiao.com/search?keyword=政府工作报告定调2024房地产)
-1. [钟薛高从60元降至2.5元是否涉嫌欺诈](https://so.toutiao.com/search?keyword=钟薛高从60元降至2.5元是否涉嫌欺诈)
-1. [海军政委：我们造航母跟美国没关系](https://so.toutiao.com/search?keyword=海军政委：我们造航母跟美国没关系)
-1. [红海三条海底光缆被切断 原因未明](https://so.toutiao.com/search?keyword=红海三条海底光缆被切断+原因未明)
-1. [特朗普大获全胜却仍有名无份？](https://so.toutiao.com/search?keyword=特朗普大获全胜却仍有名无份？)
-1. [中国下一艘航母还会有哪些惊喜](https://so.toutiao.com/search?keyword=中国下一艘航母还会有哪些惊喜)
-1. [重庆合川太和飞机场正式开工？](https://so.toutiao.com/search?keyword=重庆合川太和飞机场正式开工？)
-1. [理想MEGA遭遇“滑铁卢”说明了什么](https://so.toutiao.com/search?keyword=理想MEGA遭遇“滑铁卢”说明了什么)
 1. [日本球迷：泰山队踢得太粗暴](https://so.toutiao.com/search?keyword=日本球迷：泰山队踢得太粗暴)
-1. [美专家：北约或秘密撤走泽连斯基](https://so.toutiao.com/search?keyword=美专家：北约或秘密撤走泽连斯基)
+1. [钟薛高从60元降至2.5元是否涉嫌欺诈](https://so.toutiao.com/search?keyword=钟薛高从60元降至2.5元是否涉嫌欺诈)
+1. [政府工作报告定调2024房地产](https://so.toutiao.com/search?keyword=政府工作报告定调2024房地产)
+1. [张文宏：新冠已成地方性流行病](https://so.toutiao.com/search?keyword=张文宏：新冠已成地方性流行病)
+1. [特朗普大获全胜却仍有名无份？](https://so.toutiao.com/search?keyword=特朗普大获全胜却仍有名无份？)
+1. [理想MEGA遭遇“滑铁卢”说明了什么](https://so.toutiao.com/search?keyword=理想MEGA遭遇“滑铁卢”说明了什么)
+1. [重庆合川太和飞机场正式开工？](https://so.toutiao.com/search?keyword=重庆合川太和飞机场正式开工？)
 1. [印度7名强暴西班牙网红嫌疑人被捕](https://so.toutiao.com/search?keyword=印度7名强暴西班牙网红嫌疑人被捕)
-1. [政协委员建议为中小学校园餐立法](https://so.toutiao.com/search?keyword=政协委员建议为中小学校园餐立法)
-1. [媒体：拆穿菲律宾的南海计划](https://so.toutiao.com/search?keyword=媒体：拆穿菲律宾的南海计划)
+1. [人大代表联合建议逐步放开秸秆禁烧](https://so.toutiao.com/search?keyword=人大代表联合建议逐步放开秸秆禁烧)
+1. [中国下一艘航母还会有哪些惊喜](https://so.toutiao.com/search?keyword=中国下一艘航母还会有哪些惊喜)
 1. [女游客遭强暴再令印度走上风口浪尖](https://so.toutiao.com/search?keyword=女游客遭强暴再令印度走上风口浪尖)
 1. [财政部长：各级政府要习惯过紧日子](https://so.toutiao.com/search?keyword=财政部长：各级政府要习惯过紧日子)
-1. [网友搬家不懂车型 叫来7米6大货车](https://so.toutiao.com/search?keyword=网友搬家不懂车型+叫来7米6大货车)
+1. [海军政委：我们造航母跟美国没关系](https://so.toutiao.com/search?keyword=海军政委：我们造航母跟美国没关系)
+1. [小杨哥称今年将再减少带货直播](https://so.toutiao.com/search?keyword=小杨哥称今年将再减少带货直播)
+1. [领导要求实习生加班遭怒怼](https://so.toutiao.com/search?keyword=领导要求实习生加班遭怒怼)
+1. [董明珠回应省委书记喊话：今年招6千人](https://so.toutiao.com/search?keyword=董明珠回应省委书记喊话：今年招6千人)
+1. [美专家：北约或秘密撤走泽连斯基](https://so.toutiao.com/search?keyword=美专家：北约或秘密撤走泽连斯基)
+1. [曝英军特种部队5名成员被捕](https://so.toutiao.com/search?keyword=曝英军特种部队5名成员被捕)
+1. [日媒解读iPhone在华销量大跌原因](https://so.toutiao.com/search?keyword=日媒解读iPhone在华销量大跌原因)
+1. [李家超人大列席证号码为“0023”](https://so.toutiao.com/search?keyword=李家超人大列席证号码为“0023”)
 1. [治理天价彩礼的三个县城样本](https://so.toutiao.com/search?keyword=治理天价彩礼的三个县城样本)
+1. [侄子出钱爆改流浪25年叔叔成霸总](https://so.toutiao.com/search?keyword=侄子出钱爆改流浪25年叔叔成霸总)
+1. [三星多款Galaxy A系列新机即将发布](https://so.toutiao.com/search?keyword=三星多款Galaxy+A系列新机即将发布)
+1. [《周处除三害》陈桂林同款手表热卖](https://so.toutiao.com/search?keyword=《周处除三害》陈桂林同款手表热卖)
+1. [连续发行超长期特别国债意味着什么](https://so.toutiao.com/search?keyword=连续发行超长期特别国债意味着什么)
+1. [普京被俄罗斯大妈热情亲吻](https://so.toutiao.com/search?keyword=普京被俄罗斯大妈热情亲吻)
+1. [相亲当晚女生列出每月9900元开支](https://so.toutiao.com/search?keyword=相亲当晚女生列出每月9900元开支)
+1. [澳大利亚和东盟发表声明 中方回应](https://so.toutiao.com/search?keyword=澳大利亚和东盟发表声明+中方回应)
+1. [1人兼任40家医院院长 当地回应](https://so.toutiao.com/search?keyword=1人兼任40家医院院长+当地回应)
+1. [山东泰山1-2横滨水手](https://so.toutiao.com/search?keyword=山东泰山1-2横滨水手)
+1. [代表建议提高中小学教师教龄津贴](https://so.toutiao.com/search?keyword=代表建议提高中小学教师教龄津贴)
+1. [光刻机巨头阿斯麦欲在海外扩张](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦欲在海外扩张)
+1. [SpaceX“星舰”或将进行第三次试飞](https://so.toutiao.com/search?keyword=SpaceX“星舰”或将进行第三次试飞)
+1. [徐娇怼日本导演竹内亮](https://so.toutiao.com/search?keyword=徐娇怼日本导演竹内亮)
 1. [证监会主席：还是“菜鸟”边学边干](https://so.toutiao.com/search?keyword=证监会主席：还是“菜鸟”边学边干)
+1. [联想原董事长曾茂朝去世](https://so.toutiao.com/search?keyword=联想原董事长曾茂朝去世)
+1. [崔康熙与对方教练组爆发冲突](https://so.toutiao.com/search?keyword=崔康熙与对方教练组爆发冲突)
+1. [全年亏损超200亿 蔚来股价为何还涨](https://so.toutiao.com/search?keyword=全年亏损超200亿+蔚来股价为何还涨)
+1. [从业者感慨今年工厂招工难](https://so.toutiao.com/search?keyword=从业者感慨今年工厂招工难)
 1. [乌克兰8地区遇袭 击落38架无人机](https://so.toutiao.com/search?keyword=乌克兰8地区遇袭+击落38架无人机)
+1. [越来越多年轻人确诊为淡淡综合征](https://so.toutiao.com/search?keyword=越来越多年轻人确诊为淡淡综合征)
+1. [横店群演短缺有人两个月工资翻10倍](https://so.toutiao.com/search?keyword=横店群演短缺有人两个月工资翻10倍)
+1. [人大代表呼吁破解农村田地撂荒难题](https://so.toutiao.com/search?keyword=人大代表呼吁破解农村田地撂荒难题)
+1. [证监会主席：“瞪大眼”打违规](https://so.toutiao.com/search?keyword=证监会主席：“瞪大眼”打违规)
+1. [政协委员建议为中小学校园餐立法](https://so.toutiao.com/search?keyword=政协委员建议为中小学校园餐立法)
+1. [媒体：拆穿菲律宾的南海计划](https://so.toutiao.com/search?keyword=媒体：拆穿菲律宾的南海计划)
+1. [网友搬家不懂车型 叫来7米6大货车](https://so.toutiao.com/search?keyword=网友搬家不懂车型+叫来7米6大货车)
 1. [拜登和特朗普几乎锁定所在党派提名](https://so.toutiao.com/search?keyword=拜登和特朗普几乎锁定所在党派提名)
 1. [两会后民生热点将有哪些变化](https://so.toutiao.com/search?keyword=两会后民生热点将有哪些变化)
-1. [光刻机巨头阿斯麦欲在海外扩张](https://so.toutiao.com/search?keyword=光刻机巨头阿斯麦欲在海外扩张)
 1. [门前老房整修令叔侄伤和气](https://so.toutiao.com/search?keyword=门前老房整修令叔侄伤和气)
 1. [代表建议用约束性措施遏制高价彩礼](https://so.toutiao.com/search?keyword=代表建议用约束性措施遏制高价彩礼)
-1. [张文宏：新冠已成地方性流行病](https://so.toutiao.com/search?keyword=张文宏：新冠已成地方性流行病)
-1. [连续发行超长期特别国债意味着什么](https://so.toutiao.com/search?keyword=连续发行超长期特别国债意味着什么)
 1. [亚美尼亚要求俄边防人员撤出一机场](https://so.toutiao.com/search?keyword=亚美尼亚要求俄边防人员撤出一机场)
-1. [曝英军特种部队5名成员被捕](https://so.toutiao.com/search?keyword=曝英军特种部队5名成员被捕)
-1. [代表建议提高中小学教师教龄津贴](https://so.toutiao.com/search?keyword=代表建议提高中小学教师教龄津贴)
 1. [印度外长：中印将在多领域重构世界](https://so.toutiao.com/search?keyword=印度外长：中印将在多领域重构世界)
-1. [山东泰山1-2横滨水手](https://so.toutiao.com/search?keyword=山东泰山1-2横滨水手)
 1. [建议3岁以下子女父母每月1天育儿假](https://so.toutiao.com/search?keyword=建议3岁以下子女父母每月1天育儿假)
 1. [奔驰官方回应：从未放弃电动化](https://so.toutiao.com/search?keyword=奔驰官方回应：从未放弃电动化)
-1. [领导要求实习生加班遭怒怼](https://so.toutiao.com/search?keyword=领导要求实习生加班遭怒怼)
 1. [今年将出台结构性的减税降费政策](https://so.toutiao.com/search?keyword=今年将出台结构性的减税降费政策)
 1. [黑利拟退出美国总统选举](https://so.toutiao.com/search?keyword=黑利拟退出美国总统选举)
 1. [钱塘江北岸滩涂开始大面积坍塌](https://so.toutiao.com/search?keyword=钱塘江北岸滩涂开始大面积坍塌)
-1. [李家超人大列席证号码为“0023”](https://so.toutiao.com/search?keyword=李家超人大列席证号码为“0023”)
-1. [1人兼任40家医院院长 当地回应](https://so.toutiao.com/search?keyword=1人兼任40家医院院长+当地回应)
 1. [建议推动建立父亲育儿假制度](https://so.toutiao.com/search?keyword=建议推动建立父亲育儿假制度)
 1. [政府工作报告对台阐述引发岛内关注](https://so.toutiao.com/search?keyword=政府工作报告对台阐述引发岛内关注)
 1. [彩礼是对女性的生育补偿吗](https://so.toutiao.com/search?keyword=彩礼是对女性的生育补偿吗)
-1. [横店群演短缺有人两个月工资翻10倍](https://so.toutiao.com/search?keyword=横店群演短缺有人两个月工资翻10倍)
 1. [14岁少年下公交后车祸去世谁担责](https://so.toutiao.com/search?keyword=14岁少年下公交后车祸去世谁担责)
 1. [女子和男友吵架将其鞋子从35楼扔下](https://so.toutiao.com/search?keyword=女子和男友吵架将其鞋子从35楼扔下)
-1. [日媒解读iPhone在华销量大跌原因](https://so.toutiao.com/search?keyword=日媒解读iPhone在华销量大跌原因)
 1. [证监会：市场恐慌时该出手果断出手](https://so.toutiao.com/search?keyword=证监会：市场恐慌时该出手果断出手)
 1. [乌克兰全境发布防空警报](https://so.toutiao.com/search?keyword=乌克兰全境发布防空警报)
 1. [乌军首次用法国精确炸弹攻击俄军](https://so.toutiao.com/search?keyword=乌军首次用法国精确炸弹攻击俄军)
-1. [证监会主席：“瞪大眼”打违规](https://so.toutiao.com/search?keyword=证监会主席：“瞪大眼”打违规)
-1. [徐娇怼日本导演竹内亮](https://so.toutiao.com/search?keyword=徐娇怼日本导演竹内亮)
 1. [代表建议提高农民养老标准](https://so.toutiao.com/search?keyword=代表建议提高农民养老标准)
 1. [俄罗斯热电站爆炸事故已致1人死亡](https://so.toutiao.com/search?keyword=俄罗斯热电站爆炸事故已致1人死亡)
 1. [媒体人：泰山队人员问题多](https://so.toutiao.com/search?keyword=媒体人：泰山队人员问题多)
@@ -71,7 +86,6 @@
 1. [吴清：前段时间市场波动暴露出问题](https://so.toutiao.com/search?keyword=吴清：前段时间市场波动暴露出问题)
 1. [保洁夫妇辞别 业主捐款7000余元](https://so.toutiao.com/search?keyword=保洁夫妇辞别+业主捐款7000余元)
 1. [娃哈哈女职工妇女节放假 还发100元](https://so.toutiao.com/search?keyword=娃哈哈女职工妇女节放假+还发100元)
-1. [联想原董事长曾茂朝去世](https://so.toutiao.com/search?keyword=联想原董事长曾茂朝去世)
 1. [俄称考虑与中国合作在月球建核电站](https://so.toutiao.com/search?keyword=俄称考虑与中国合作在月球建核电站)
 1. [金毛丢失50天回家 女儿抱住大哭](https://so.toutiao.com/search?keyword=金毛丢失50天回家+女儿抱住大哭)
 1. [中方奉劝美方不要将菲律宾作为棋子](https://so.toutiao.com/search?keyword=中方奉劝美方不要将菲律宾作为棋子)
@@ -83,29 +97,21 @@
 1. [上海的哥笔下的人间百态](https://so.toutiao.com/search?keyword=上海的哥笔下的人间百态)
 1. [台湾省人大代表：两岸的交流不能停](https://so.toutiao.com/search?keyword=台湾省人大代表：两岸的交流不能停)
 1. [美国货船在亚丁港附近海域发生爆炸](https://so.toutiao.com/search?keyword=美国货船在亚丁港附近海域发生爆炸)
-1. [从业者感慨今年工厂招工难](https://so.toutiao.com/search?keyword=从业者感慨今年工厂招工难)
 1. [委员建议放宽公务员录用体检标准](https://so.toutiao.com/search?keyword=委员建议放宽公务员录用体检标准)
 1. [两会上这些民生实事关乎你我](https://so.toutiao.com/search?keyword=两会上这些民生实事关乎你我)
-1. [侄子出钱爆改流浪25年叔叔成霸总](https://so.toutiao.com/search?keyword=侄子出钱爆改流浪25年叔叔成霸总)
 1. [多城海景房被低价抛售](https://so.toutiao.com/search?keyword=多城海景房被低价抛售)
-1. [小杨哥称今年将再减少带货直播](https://so.toutiao.com/search?keyword=小杨哥称今年将再减少带货直播)
-1. [相亲当晚女生列出每月9900元开支](https://so.toutiao.com/search?keyword=相亲当晚女生列出每月9900元开支)
 1. [中使馆提醒在以中国公民加强防范](https://so.toutiao.com/search?keyword=中使馆提醒在以中国公民加强防范)
 1. [台前“防长”冯世宽：两岸都是中国人](https://so.toutiao.com/search?keyword=台前“防长”冯世宽：两岸都是中国人)
 1. [杨鸣：赵率舟转型需时间](https://so.toutiao.com/search?keyword=杨鸣：赵率舟转型需时间)
-1. [《周处除三害》陈桂林同款手表热卖](https://so.toutiao.com/search?keyword=《周处除三害》陈桂林同款手表热卖)
 1. [与俄合作在月球建核电站？中方回应](https://so.toutiao.com/search?keyword=与俄合作在月球建核电站？中方回应)
 1. [胖东来多名代购致数十人后方排长龙](https://so.toutiao.com/search?keyword=胖东来多名代购致数十人后方排长龙)
 1. [2024款腾势D9上市 33.98万起](https://so.toutiao.com/search?keyword=2024款腾势D9上市+33.98万起)
 1. [霉霉在“超级星期二”呼吁粉丝投票](https://so.toutiao.com/search?keyword=霉霉在“超级星期二”呼吁粉丝投票)
 1. [严格落实地方政府举债终身问责制](https://so.toutiao.com/search?keyword=严格落实地方政府举债终身问责制)
 1. [台湾博主对广东司机的话赞同不已](https://so.toutiao.com/search?keyword=台湾博主对广东司机的话赞同不已)
-1. [SpaceX“星舰”或将进行第三次试飞](https://so.toutiao.com/search?keyword=SpaceX“星舰”或将进行第三次试飞)
 1. [法拉利全身贴钻 用了三四天才铲完](https://so.toutiao.com/search?keyword=法拉利全身贴钻+用了三四天才铲完)
 1. [泰山次回合能否创造历史](https://so.toutiao.com/search?keyword=泰山次回合能否创造历史)
-1. [董明珠回应省委书记喊话：今年招6千人](https://so.toutiao.com/search?keyword=董明珠回应省委书记喊话：今年招6千人)
 1. [邱毅：民进党妄图挑动“反中”民粹](https://so.toutiao.com/search?keyword=邱毅：民进党妄图挑动“反中”民粹)
-1. [全年亏损超200亿 蔚来股价为何还涨](https://so.toutiao.com/search?keyword=全年亏损超200亿+蔚来股价为何还涨)
 1. [委员建议高校取消公众入校限制](https://so.toutiao.com/search?keyword=委员建议高校取消公众入校限制)
 1. [硬汉患带状疱疹疼得睡不着](https://so.toutiao.com/search?keyword=硬汉患带状疱疹疼得睡不着)
 1. [男子AI换脸复活已故父亲宽慰奶奶](https://so.toutiao.com/search?keyword=男子AI换脸复活已故父亲宽慰奶奶)
